--- a/src/index.css
+++ b/src/index.css
@@ -138,3 +138,25 @@
 [data-color="blue"] {
   @apply bg-blue-400;
 }
+
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: var(--card);
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 0px;
+  background-color: var(--muted);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--ring);
+}
