--- a/src/index.css
+++ b/src/index.css
@@ -160,6 +160,32 @@ img {
   @apply bg-pink-400;
 }
 
+/* Fill */
+
+[data-fill="indigo"] {
+  @apply fill-indigo-400;
+}
+[data-fill="red"] {
+  @apply fill-red-400;
+}
+[data-fill="green"] {
+  @apply fill-green-700;
+}
+.dark {
+  [data-fill="green"] {
+    @apply fill-green-500;
+  }
+}
+[data-fill="amber"] {
+  @apply fill-amber-400;
+}
+[data-fill="blue"] {
+  @apply fill-blue-400;
+}
+[data-fill="pink"] {
+  @apply fill-pink-400;
+}
+
 *::-webkit-scrollbar {
   height: 10px;
   width: 7px;
@@ -178,7 +204,7 @@ img {
   background-color: var(--border);
 }
 
-.dark .settings-dialog {
-  box-shadow: 0 0 0 1px #30302e, 0px 24px 48px -8px #0000007a,
+.dark .dialog {
+  box-shadow: 0px 24px 48px -8px #0000007a,
     0px 4px 12px -1px #0000003d;
 }
